; ModuleID = '/home/carl/AnghaBench/zfs/module/icp/io/extr_aes.c_aes_mod_init.c'
source_filename = "/home/carl/AnghaBench/zfs/module/icp/io/extr_aes.c_aes_mod_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@modlinkage = common dso_local global i32 0, align 4
@aes_prov_info = common dso_local global i32 0, align 4
@aes_prov_handle = common dso_local global i32 0, align 4
@EACCES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aes_mod_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @aes_impl_init()
  %4 = call i32 (...) @gcm_impl_init()
  %5 = call i32 @mod_install(i32* @modlinkage)
  store i32 %5, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = load i32, i32* %2, align 4
  store i32 %8, i32* %1, align 4
  br label %16

9:                                                ; preds = %0
  %10 = call i64 @crypto_register_provider(i32* @aes_prov_info, i32* @aes_prov_handle)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = call i32 @mod_remove(i32* @modlinkage)
  %14 = load i32, i32* @EACCES, align 4
  store i32 %14, i32* %1, align 4
  br label %16

15:                                               ; preds = %9
  store i32 0, i32* %1, align 4
  br label %16

16:                                               ; preds = %15, %12, %7
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i32 @aes_impl_init(...) #1

declare dso_local i32 @gcm_impl_init(...) #1

declare dso_local i32 @mod_install(i32*) #1

declare dso_local i64 @crypto_register_provider(i32*, i32*) #1

declare dso_local i32 @mod_remove(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
